--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   supabase_flutter: ^2.5.0
   flutter_dotenv: ^5.1.0
   intl: ^0.19.0
+  url_launcher: ^6.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,6 +61,7 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/data/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
